# linux-tools

./: README.md
autodeploy/vagrant/: Vagrantfile
cmake/: CMakeLists.txt
conf/modprobe-conf/: i915.conf  iwlwifi.conf  modprobe.conf
conf/xorg-conf/: 20-intel.conf
dmenu_ssh/: dmenu_ssh
kernel/mod_rofl/: Makefile  README.md  rofl.c
trackpad/: trackpad.py  trackpad.sh
